Switch Maven 4 migration approach
Change primary strategy from Package Hierarchy to Module Source
Hierarchy for better JPMS integration and future-proofing.

Key changes:
- Update directory structure to use src/java/MODULE/main layout
- Revise symlink strategy for per-module linking
- Update POM template with explicit <module> declarations
- Flip recommendation: Module Source Hierarchy now primary
- Update migration workflow steps for new structure
- Enhance multi-module example handling

Benefits of Module Source Hierarchy:
- Explicit module declaration in POM
- Automatic JPMS compiler arguments
- Better multi-module organization
- Aligns with Maven 4's module-aware design

Each module now gets explicit structure:
  mkdir -p src/java/modmain
  ln -s ../../../../src/modmain src/java/modmain/main

POM declares each module explicitly:
  <source>
    <module>modmain</module>
    <directory>src/java/modmain/main</directory>
  </source>

Strategy requires verification with actual examples before
full-scale migration.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

Introduced in the course of support-and-care/maven-support-and-care#137